--- a/templates/basic/package.json
+++ b/templates/basic/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "minista-project-minimal-ts",
+  "name": "minista-project-basic",
   "private": true,
   "scripts": {
     "dev": "minista",
-    "build": "minista build"
+    "build": "minista build",
+    "zip": "bestzip ./dist/dist.zip ./dist",
+    "delivery": "npm run build && npm run zip",
+    "clean": "trash ./dist"
   },
   "prettier": {
     "semi": false
@@ -19,7 +22,11 @@
   "devDependencies": {
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "bestzip": "^2.2.0",
+    "classnames": "^2.3.1",
+    "dayjs": "^1.10.7",
     "minista": "^1.0.2",
+    "minista-sitemap": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.5.4"
