--- a/templates/ts/package.json
+++ b/templates/ts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "minista-project-minimal-js",
+  "name": "minista-project-ts",
   "private": true,
   "scripts": {
     "dev": "minista",
@@ -17,8 +17,11 @@
     "last 1 ChromeAndroid versions"
   ],
   "devDependencies": {
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "minista": "^1.0.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "typescript": "^4.5.4"
   }
 }
