--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "watch": "tsc --watch",
+    "prepublishOnly": "npm run build",
     "clean": "trash ./dist"
   },
   "prettier": {
