--- a/templates/basic/package.json
+++ b/templates/basic/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "minista",
     "build": "minista build",
+    "preview": "minista preview",
     "zip": "bestzip ./dist/dist.zip ./dist",
     "delivery": "npm run build && npm run zip",
     "clean": "trash ./dist"
@@ -25,8 +26,8 @@
     "bestzip": "^2.2.0",
     "classnames": "^2.3.1",
     "dayjs": "^1.10.8",
-    "minista": "^1.2.0",
-    "minista-sitemap": "^1.1.0",
+    "minista": "^2.0.0-alpha.12",
+    "minista-sitemap": "^1.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.6.2"
