--- a/templates/js/package.json
+++ b/templates/js/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "scripts": {
     "dev": "minista",
-    "build": "minista build"
+    "build": "minista build",
+    "preview": "minista preview"
   },
   "prettier": {
     "semi": false
@@ -17,7 +18,7 @@
     "last 1 ChromeAndroid versions"
   ],
   "devDependencies": {
-    "minista": "^1.2.0",
+    "minista": "^2.0.0-alpha.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
