--- a/templates/ts/package.json
+++ b/templates/ts/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "scripts": {
     "dev": "minista",
-    "build": "minista build"
+    "build": "minista build",
+    "preview": "minista preview"
   },
   "prettier": {
     "semi": false
@@ -19,7 +20,7 @@
   "devDependencies": {
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "minista": "^1.2.0",
+    "minista": "^2.0.0-alpha.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.5.4"
