--- a/templates/basic/package.json
+++ b/templates/basic/package.json
@@ -5,7 +5,7 @@
     "dev": "minista",
     "build": "minista build",
     "preview": "minista preview",
-    "zip": "bestzip ./dist/dist.zip ./dist",
+    "zip": "mkdir -p dist && zip -r dist/dist.zip dist/ -x '*.DS_Store'",
     "delivery": "npm run build && npm run zip",
     "clean": "trash ./dist"
   },
@@ -23,7 +23,6 @@
   "devDependencies": {
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
-    "bestzip": "^2.2.0",
     "classnames": "^2.3.1",
     "dayjs": "^1.10.8",
     "minista": "^2.0.0-alpha.13",
