--- a/templates/basic/package.json
+++ b/templates/basic/package.json
@@ -24,11 +24,11 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "classnames": "^2.3.1",
-    "dayjs": "^1.10.8",
-    "minista": "^2.0.0-alpha.21",
+    "dayjs": "^1.11.0",
+    "minista": "^2.0.0",
     "minista-sitemap": "^1.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.3"
   }
 }
