--- a/templates/ts/package.json
+++ b/templates/ts/package.json
@@ -20,9 +20,9 @@
   "devDependencies": {
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "minista": "^2.0.0-alpha.21",
+    "minista": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.5.4"
+    "typescript": "^4.6.3"
   }
 }
