--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "create-minista",
   "description": "Scaffolding for minista projects",
-  "version": "2.0.0-alpha.21",
+  "version": "2.0.0",
   "type": "module",
   "bin": {
     "create-minista": "./cli.mjs"
