--- a/templates/basic/package.json
+++ b/templates/basic/package.json
@@ -21,9 +21,10 @@
     "last 1 ChromeAndroid versions"
   ],
   "devDependencies": {
+    "@types/react": "^17.0.43",
     "classnames": "^2.3.1",
     "dayjs": "^1.11.0",
-    "minista": "^2.4.0",
+    "minista": "^2.4.1",
     "minista-sitemap": "^1.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
