--- a/templates/ts/package.json
+++ b/templates/ts/package.json
@@ -18,7 +18,8 @@
     "last 1 ChromeAndroid versions"
   ],
   "devDependencies": {
-    "minista": "^2.4.0",
+    "@types/react": "^17.0.43",
+    "minista": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.6.4"
