--- a/templates/basic/package.json
+++ b/templates/basic/package.json
@@ -21,7 +21,8 @@
     "last 1 ChromeAndroid versions"
   ],
   "devDependencies": {
-    "@types/react": "^17.0.43",
+    "@types/react": "^17.0.45",
+    "@types/react-dom": "^17.0.16",
     "classnames": "^2.3.1",
     "dayjs": "^1.11.0",
     "minista": "^2.4.1",
