--- a/templates/ts/package.json
+++ b/templates/ts/package.json
@@ -18,7 +18,8 @@
     "last 1 ChromeAndroid versions"
   ],
   "devDependencies": {
-    "@types/react": "^17.0.43",
+    "@types/react": "^17.0.45",
+    "@types/react-dom": "^17.0.16",
     "minista": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
